src/objects/Deposit_Batch_Check_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Deposit</label>
        <referenceTo>Bank_Deposit__c</referenceTo>
        <relationshipLabel>Deposit Batch Check Payments</relationshipLabel>
        <relationshipName>Deposit_Batch_Check_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deposit Batch Check Payments</relationshipLabel>
        <relationshipName>Deposit_Batch_Check_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>TXN__c</referenceTo>
        <relationshipLabel>Deposit Batch Check Payments</relationshipLabel>
        <relationshipName>Deposit_Batch_Check_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deposit Batch Check Payment</label>
    <nameField>
        <displayFormat>DepBaPay-{000000}</displayFormat>
        <label>Deposit Batch Check Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit Batch Check Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>